Added main charging mechanic

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,11 @@ tracing = { version = "0.1", features = [
     "max_level_debug",
     "release_max_level_warn",
 ] }
+bevy_hui = "0.4.0"
+avian2d = "0.3.0"
+bevy_asset_loader = { version = "0.23.0", features = ["2d", "progress_tracking", "standard_dynamic_assets"] }
+bevy-inspector-egui = "0.31.0"
+bevy_egui = "0.34.1"
 
 # Your web builds will start failing if you add a dependency that pulls in `getrandom` v0.3+.
 # To fix this, you should tell `getrandom` to use the `wasm_js` backend on Wasm.
